[gd_scene load_steps=3 format=3 uid="uid://dwlmr5at687vd"]

[ext_resource type="Script" path="res://examples/chat/chat.gd" id="1_hwoml"]

[sub_resource type="Theme" id="Theme_n8br8"]

[node name="Chat" type="MarginContainer"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -15.5
offset_right = 200.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_n8br8")
script = ExtResource("1_hwoml")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MessagePanel" type="PanelContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBox/MessagePanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollBox" type="ScrollContainer" parent="VBox/MessagePanel/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MessageBox" type="VBoxContainer" parent="VBox/MessagePanel/MarginContainer/ScrollBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="ChatBox" type="LineEdit" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="focus_entered" from="VBox/ChatBox" to="." method="_on_chat_box_focus_entered"]
[connection signal="focus_exited" from="VBox/ChatBox" to="." method="_on_chat_box_focus_exited"]
[connection signal="text_submitted" from="VBox/ChatBox" to="." method="_on_line_edit_text_submitted"]
